--- a/E-COMMERCE/style/style.scss
+++ b/E-COMMERCE/style/style.scss
@@ -22,7 +22,7 @@ ol {
 
 a {
     text-decoration: none;
-    color: #Fff;
+    color: #fff;
 }
 
 #bottom {
@@ -79,6 +79,7 @@ a {
                     width: 100%;
                     outline: none;
                     letter-spacing: 1px;
+                    color: #fff;
                 }
 
                 input[type="submit"] {
