--- a/E-COMMERCE/Price/css/blog.css
+++ b/E-COMMERCE/Price/css/blog.css
@@ -98,4 +98,4 @@ a {
   font-size: 25px;
   margin-left: 10px;
   opacity: 0.7;
-}/*# sourceMappingURL=blog2.css.map */
+}/*# sourceMappingURL=blog.css.map */
