--- a/Tasks/assets/css/index.css
+++ b/Tasks/assets/css/index.css
@@ -122,4 +122,4 @@ i {
 .icons i {
   color: #fff;
   margin-right: 10px;
-}/*# sourceMappingURL=task3.css.map */
+}/*# sourceMappingURL=index.css.map */
