--- a/Html Css/CozaStore/css/about.css
+++ b/Html Css/CozaStore/css/about.css
@@ -62,6 +62,13 @@ header .header {
   display: flex;
   align-items: center;
 }
+header .header .header__items {
+  align-items: center;
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
 header .header .nav__lists {
   display: flex;
   -moz-column-gap: 30px;
@@ -83,9 +90,6 @@ header .header .nav__lists .nav__lists-info:hover {
 }
 header .header .nav__lists #nav__lists-info {
   color: #6c7ae0;
-}
-header .header .header__icons {
-  margin-left: 360px;
 }
 header .header .header__icons-info {
   margin-left: 30px;
@@ -113,7 +117,8 @@ header .header .header__icons-info i:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 284px 15px 100px 15px;
+  position: relative;
+  top: 40%;
 }
 .search__info form {
   z-index: 2000;
@@ -155,7 +160,7 @@ header .header .header__icons-info i:hover {
   z-index: 2000;
   position: absolute;
   right: 15.5%;
-  top: 33%;
+  top: -30%;
   width: 25px;
   height: 25px;
   opacity: 0.6;
