--- a/Html Css/CozaStore/css/home.css
+++ b/Html Css/CozaStore/css/home.css
@@ -44,6 +44,13 @@ a {
   display: block !important;
 }
 
+.box2:hover {
+  cursor: pointer;
+}
+.box2:hover .box__text2 {
+  display: block !important;
+}
+
 .transformX {
   transform: translateX(100%);
 }
@@ -53,11 +60,7 @@ a {
 }
 
 .hidden {
-  display: none;
-}
-
-.block {
-  display: block;
+  display: none !important;
 }
 
 header {
@@ -74,6 +77,13 @@ header .header {
   margin: 0 auto;
   display: flex;
   align-items: center;
+}
+header .header .header__items {
+  align-items: center;
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 header .header .nav__lists {
   display: flex;
@@ -96,9 +106,6 @@ header .header .nav__lists .nav__lists-info:hover {
 }
 header .header .nav__lists #nav__lists-info {
   color: #6c7ae0;
-}
-header .header .header__icons {
-  margin-left: 360px;
 }
 header .header .header__icons-info {
   margin-left: 30px;
@@ -126,7 +133,8 @@ header .header .header__icons-info i:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 284px 15px 100px 15px;
+  position: relative;
+  top: 40%;
 }
 .search__info form {
   z-index: 2000;
@@ -168,7 +176,7 @@ header .header .header__icons-info i:hover {
   z-index: 2000;
   position: absolute;
   right: 15.5%;
-  top: 33%;
+  top: -30%;
   width: 25px;
   height: 25px;
   opacity: 0.6;
@@ -375,6 +383,16 @@ main .boxes {
   width: 80%;
   margin: 0 auto;
   justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 30px;
+}
+main .boxes .box2 {
+  width: 568px !important;
+  height: 382px !important;
+}
+main .boxes .box2 .box__image2 {
+  width: 568px !important;
+  height: 382px !important;
 }
 main .boxes .box {
   z-index: 1;
@@ -397,6 +415,10 @@ main .boxes .box .box__info:hover .box__text {
   color: #fff !important;
   transition: all linear 0.2s;
 }
+main .boxes .box .box__info2 {
+  width: 568px !important;
+  height: 382px !important;
+}
 main .boxes .box .box__info {
   z-index: 2;
   position: absolute;
@@ -417,6 +439,10 @@ main .boxes .box .box__info .box__info-text .box__title {
 main .boxes .box .box__info .box__info-text .box__text {
   font-size: 14px;
   color: #555;
+}
+main .boxes .box .box__info .box2__info-text2 {
+  padding-top: 230px !important;
+  padding-left: 30px !important;
 }
 main .boxes .box .box__info .box__info-text2 {
   padding-top: 100px;
@@ -547,19 +573,86 @@ main .product .product_carts .product__box img:hover {
   display: flex;
   left: 11.5%;
   top: 8%;
+  z-index: 10000;
   align-items: center;
   justify-content: center;
-  z-index: 10000;
   width: 1170px;
   height: 750px;
   border: 1px solid #333;
   display: flex;
   align-items: center;
   background-color: #fff;
+  border: none;
 }
-.pop__slider-image img {
-  width: 513px;
-  height: 600px;
+.pop .pop__swiper {
+  position: relative;
+  height: 750px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+.pop .pop__swiper .swiper {
+  width: 1170px;
+  height: 100%;
+}
+.pop .pop__swiper .swiper-slide {
+  font-size: 18px;
+  color: #fff;
+  box-sizing: border-box;
+  padding: 40px 60px;
+}
+.pop .pop__swiper .parallax-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 130%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+.pop .pop__swiper .swiper-slide .title {
+  font-size: 45px;
+  font-weight: 300;
+  color: #000;
+  padding: 50px 0;
+  padding-left: 20px;
+}
+.pop .pop__swiper .swiper-slide .subtitle {
+  font-size: 25px;
+  color: #000;
+  padding-bottom: 40px;
+  padding-left: 20px;
+}
+.pop .pop__swiper .swiper-slide .text {
+  font-size: 15px;
+  max-width: 330px;
+  line-height: 1.3;
+  color: #000;
+  padding-left: 20px;
+}
+
+.swiper-button-next {
+  color: #000 !important;
+}
+
+.swiper-button-prev {
+  color: #000 !important;
+}
+
+.swiper-button-next:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear 0.1s;
+}
+
+.swiper-button-prev:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear 0.1s;
 }
 
 .pop__overlay {
@@ -571,7 +664,7 @@ main .product .product_carts .product__box img:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 footer {
@@ -671,4 +764,4 @@ footer .icon__pay {
 }
 footer .icon__pay img:hover {
   cursor: pointer;
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=home.css.map */
