--- a/Html Css/CozaStore/css/home.scss
+++ b/Html Css/CozaStore/css/home.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-.loader{
+.loader {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -33,12 +33,18 @@ a {
 .slider:hover {
   .fa-solid {
     display: block !important;
-    transition: all linear 0.3s ;
+    transition: all linear 0.3s;
     cursor: pointer;
   }
 }
 
 .box:hover {
+  cursor: pointer;
+  .box__text2 {
+    display: block !important;
+  }
+}
+.box2:hover {
   cursor: pointer;
   .box__text2 {
     display: block !important;
@@ -51,11 +57,9 @@ a {
   transform: translateY(-100%);
 }
 .hidden {
-  display: none;
-} 
-.block {
-  display: block;
+  display: none !important;
 }
+
 header {
   position: fixed;
   top: 0;
@@ -69,18 +73,22 @@ header {
     margin: 0 auto;
     display: flex;
     align-items: center;
-
+    .header__items {
+      align-items: center;
+      width: 1200px;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+    }
     .nav {
       &__lists {
         display: flex;
         column-gap: 30px;
         margin: 0 70px;
-       
-    
+
         &-info {
           color: #000;
           font-size: 14px;
-     
         }
         .nav__lists-info {
           color: #000;
@@ -97,7 +105,6 @@ header {
       }
     }
     .header__icons {
-      margin-left: 360px;
       &-info {
         margin-left: 30px;
         i {
@@ -116,17 +123,18 @@ header {
 
 .search {
   position: fixed;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   z-index: 1000;
   height: 100%;
   width: 100%;
   bottom: 0;
-  transition: .8s;
+  transition: 0.8s;
   &__info {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 284px 15px 100px 15px;
+    position: relative;
+    top: 40%;
     form {
       z-index: 2000;
       position: relative;
@@ -146,7 +154,7 @@ header {
       }
       input::placeholder {
         color: #333;
-        opacity: .7;
+        opacity: 0.7;
       }
       .fa-magnifying-glass {
         color: #333;
@@ -163,14 +171,14 @@ header {
       z-index: 2000;
       position: absolute;
       right: 15.5%;
-      top: 33%;
+      top: -30%;
       width: 25px;
       height: 25px;
-      opacity: .6;
+      opacity: 0.6;
     }
     .search__close-icon:hover {
       scale: 1.1;
-      transition: all linear .2s;
+      transition: all linear 0.2s;
       opacity: 1;
       cursor: pointer;
     }
@@ -190,7 +198,7 @@ header {
 main {
   .slider {
     &__images {
-      .empty_div{
+      .empty_div {
         width: 100%;
         opacity: 0;
         // height: calc(100vh - 40px);
@@ -239,19 +247,17 @@ main {
           }
           .pack__info-btn:hover {
             background-color: #000;
-            transition: all linear .5s;
+            transition: all linear 0.5s;
             cursor: pointer;
           }
         }
       }
     }
     .slider__button {
-     
       .fa-solid {
         font-size: 60px;
         color: #555555ad;
         display: none;
-        
       }
       .fa-caret-right {
         position: absolute;
@@ -267,7 +273,7 @@ main {
       }
       .fa-solid:hover {
         color: #6c7ae0;
-        transition: all linear .2s;
+        transition: all linear 0.2s;
         cursor: pointer;
       }
     }
@@ -281,7 +287,7 @@ main {
     width: 390px;
     height: 100vh;
     background-color: #fff;
-    transition: .4s;
+    transition: 0.4s;
     .container {
       background-color: #fff;
       padding: 0 50px;
@@ -299,12 +305,12 @@ main {
           color: #333;
         }
         &__icon {
-          opacity: .8;
+          opacity: 0.8;
         }
         .containers__icon:hover {
           opacity: 1;
           scale: 1.1;
-          transition: all linear .4s;
+          transition: all linear 0.4s;
           cursor: pointer;
         }
       }
@@ -327,7 +333,7 @@ main {
             }
             .container__box-text:hover {
               color: #717fe0;
-              transition: all linear .35s;
+              transition: all linear 0.35s;
               cursor: pointer;
             }
             .container__box-text2 {
@@ -362,7 +368,7 @@ main {
           }
           .container__btn-cart:hover {
             background-color: #717fe0;
-            transition: all linear .2s;
+            transition: all linear 0.2s;
           }
         }
       }
@@ -376,7 +382,7 @@ main {
       bottom: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.6);
+      background-color: rgba(0, 0, 0, 0.6);
     }
   }
   .boxes {
@@ -386,6 +392,16 @@ main {
     width: 80%;
     margin: 0 auto;
     justify-content: space-around;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    .box2 {
+      width: 568px !important;
+      height: 382px !important;
+      .box__image2 {
+        width: 568px !important;
+        height: 382px !important;
+      }
+    }
     .box {
       z-index: 1;
       position: relative;
@@ -405,6 +421,10 @@ main {
           color: #fff !important;
           transition: all linear 0.2s;
         }
+      }
+      .box__info2 {
+        width: 568px !important;
+        height: 382px !important;
       }
       .box__info {
         z-index: 2;
@@ -426,11 +446,14 @@ main {
             color: #555;
           }
         }
-
+        .box2__info-text2 {
+          padding-top: 230px !important;
+          padding-left: 30px !important;
+        }
         .box__info-text2 {
           padding-top: 100px;
           padding-left: 30px;
-          .box__text2 {  
+          .box__text2 {
             display: none;
             width: 84px;
             font-size: 15px;
@@ -443,7 +466,6 @@ main {
     }
   }
 
-  
   .product {
     width: 80%;
     margin: 0 auto;
@@ -462,11 +484,11 @@ main {
         &-info {
           font-size: 15px;
           line-height: 1.2;
-          opacity: .6;
+          opacity: 0.6;
         }
         .product__list-info:hover {
           border-bottom: 1px solid #000;
-          transition: all linear .35s;
+          transition: all linear 0.35s;
           cursor: pointer;
         }
       }
@@ -476,7 +498,7 @@ main {
       flex-wrap: wrap;
       column-gap: 45px;
       row-gap: 40px;
-        .product__box {
+      .product__box {
         position: relative;
         .quick {
           display: none;
@@ -494,13 +516,13 @@ main {
             border: none;
             color: #333;
             &-text {
-              font-size: 16px;;
+              font-size: 16px;
             }
           }
           .quick__btn:hover {
             background-color: #000;
             color: #fff;
-            transition: all linear .4s;
+            transition: all linear 0.4s;
           }
         }
         &-image {
@@ -508,7 +530,7 @@ main {
           height: 330px;
         }
         &-title {
-          opacity: .5;
+          opacity: 0.5;
           font-size: 14px;
           padding-bottom: 5px;
           padding-top: 5px;
@@ -516,19 +538,18 @@ main {
           &:hover {
             color: #717fe0;
             opacity: 1;
-            transition: all linear .2s;
+            transition: all linear 0.2s;
             cursor: pointer;
-          } 
+          }
         }
         &-price {
           font-size: 14px;
-          opacity: .9;
-          
+          opacity: 0.9;
         }
         &-icon {
-            position: absolute;
-            left: 92%;
-            top: 88.5%;
+          position: absolute;
+          left: 92%;
+          top: 88.5%;
           .product__box-heart1 {
           }
           .product__box-heart2 {
@@ -538,17 +559,15 @@ main {
           }
         }
         img:hover {
-        transform: scale(1.1);
-        transition: all linear .35s;
-        cursor: pointer;
+          transform: scale(1.1);
+          transition: all linear 0.35s;
+          cursor: pointer;
         }
       }
-
     }
-    
   }
 }
-.productImg{
+.productImg {
   position: relative;
   width: 270px;
   height: 330px;
@@ -565,23 +584,90 @@ main {
   display: flex;
   left: 11.5%;
   top: 8%;
+  z-index: 10000;
   align-items: center;
   justify-content: center;
-  z-index: 10000;
   width: 1170px;
   height: 750px;
   border: 1px solid #333;
   display: flex;
   align-items: center;
   background-color: #fff;
-  &__slider {
-    &-image {
-      img {
-        width: 513px;
-        height: 600px;
-      }
+  border: none;
+  .pop__swiper {
+    position: relative;
+    height: 750px;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    margin: 0;
+    padding: 0;
+    .swiper {
+      width: 1170px;
+      height: 100%;
+      
+    }
+
+    .swiper-slide {
+      font-size: 18px;
+      color: #fff;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      padding: 40px 60px;
+    }
+
+    .parallax-bg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 130%;
+      height: 100%;
+      -webkit-background-size: cover;
+      background-size: cover;
+      background-position: center;
+    }
+    .swiper-slide .title {
+      font-size: 45px;
+      font-weight: 300;
+      color: #000;
+      padding: 50px 0;
+      padding-left: 20px;
+    }
+
+    .swiper-slide .subtitle {
+      font-size: 25px;
+      color: #000;
+      padding-bottom: 40px;
+      padding-left: 20px;
+    }
+
+    .swiper-slide .text {
+      font-size: 15px;
+      max-width: 330px;
+      line-height: 1.3;
+      color: #000;
+      padding-left: 20px;
     }
   }
+}
+
+.swiper-button-next {
+  color: #000 !important;
+}
+.swiper-button-prev {
+  color: #000 !important;
+}
+.swiper-button-next:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear .1s;
+}
+.swiper-button-prev:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear .1s;
 }
 .pop__overlay {
   position: fixed;
@@ -592,7 +678,7 @@ main {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 footer {
@@ -622,7 +708,7 @@ footer {
         width: 76px;
         .footer__link:hover {
           color: #717fe0;
-          transition: all linear .35s;
+          transition: all linear 0.35s;
           cursor: pointer;
         }
         .footer__link {
@@ -646,7 +732,7 @@ footer {
         padding-top: 27px;
         :hover {
           color: #717fe0;
-          transition: all linear .35s;
+          transition: all linear 0.35s;
           transform: rotate(360deg);
           cursor: pointer;
         }
@@ -656,7 +742,7 @@ footer {
         width: 270px;
         height: 25px;
         background-color: transparent;
-        border-bottom: 2px solid rgba(204,204,204, 0.1);
+        border-bottom: 2px solid rgba(204, 204, 204, 0.1);
         outline: none;
         color: #b2b2b2;
         border-right: none;
@@ -678,7 +764,7 @@ footer {
       .footers__list-btn:hover {
         background-color: #fff;
         color: #717fe0;
-        transition: all linear .4s;
+        transition: all linear 0.4s;
         cursor: pointer;
       }
     }
@@ -693,4 +779,3 @@ footer {
     }
   }
 }
-
