--- a/Html Css/CozaStore/css/shop.css
+++ b/Html Css/CozaStore/css/shop.css
@@ -16,42 +16,6 @@
   z-index: 999;
 }
 
-.karusel {
-  background: #fff;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  height: 50vh;
-  width: 80%;
-  padding: 5% 0;
-  margin: 0 auto;
-}
-.karusel .swiper {
-  width: 100%;
-  height: 100%;
-}
-.karusel .swiper-wrapper {
-  margin-top: -3%;
-}
-.karusel .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.karusel .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 body,
 html {
   font-family: "Poppins", sans-serif;
@@ -89,11 +53,7 @@ a {
 }
 
 .hidden {
-  display: none;
-}
-
-.block {
-  display: block;
+  display: none !important;
 }
 
 header {
@@ -110,6 +70,13 @@ header .header {
   margin: 0 auto;
   display: flex;
   align-items: center;
+}
+header .header .header__items {
+  align-items: center;
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 header .header .nav__lists {
   display: flex;
@@ -132,9 +99,6 @@ header .header .nav__lists .nav__lists-info:hover {
 }
 header .header .nav__lists #nav__lists-info {
   color: #6c7ae0;
-}
-header .header .header__icons {
-  margin-left: 360px;
 }
 header .header .header__icons-info {
   margin-left: 30px;
@@ -162,7 +126,8 @@ header .header .header__icons-info i:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 284px 15px 100px 15px;
+  position: relative;
+  top: 40%;
 }
 .search__info form {
   z-index: 2000;
@@ -204,7 +169,7 @@ header .header .header__icons-info i:hover {
   z-index: 2000;
   position: absolute;
   right: 15.5%;
-  top: 33%;
+  top: -30%;
   width: 25px;
   height: 25px;
   opacity: 0.6;
@@ -224,6 +189,150 @@ header .header .header__icons-info i:hover {
   bottom: 0;
   width: 100%;
   height: 100%;
+}
+
+.pop {
+  position: fixed;
+  display: flex;
+  left: 11.5%;
+  top: 8%;
+  z-index: 10000;
+  align-items: center;
+  justify-content: center;
+  width: 1170px;
+  height: 750px;
+  border: 1px solid #333;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border: none;
+}
+.pop .pop__swiper {
+  position: relative;
+  height: 750px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+.pop .pop__swiper .swiper {
+  width: 1170px;
+  height: 100%;
+}
+.pop .pop__swiper .swiper-slide {
+  font-size: 18px;
+  color: #fff;
+  box-sizing: border-box;
+  padding: 40px 60px;
+}
+.pop .pop__swiper .parallax-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 130%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+.pop .pop__swiper .swiper-slide .title {
+  font-size: 45px;
+  font-weight: 300;
+  color: #000;
+  padding: 50px 0;
+  padding-left: 20px;
+}
+.pop .pop__swiper .swiper-slide .subtitle {
+  font-size: 25px;
+  color: #000;
+  padding-bottom: 40px;
+  padding-left: 20px;
+}
+.pop .pop__swiper .swiper-slide .text {
+  font-size: 15px;
+  max-width: 330px;
+  line-height: 1.3;
+  color: #000;
+  padding-left: 20px;
+}
+
+.swiper-button-next {
+  color: #000 !important;
+}
+
+.swiper-button-prev {
+  color: #000 !important;
+}
+
+.swiper-button-next:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear 0.1s;
+}
+
+.swiper-button-prev:hover {
+  color: rgb(3, 179, 3) !important;
+  font-weight: 700;
+  scale: 1.1;
+  transition: all linear 0.1s;
+}
+
+.pop__overlay {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.karusel {
+  background: #fff;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  height: 50vh;
+  width: 80%;
+  padding: 5% 0;
+  margin: 0 auto;
+  padding-bottom: 150px;
+}
+.karusel .karusel__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 50px;
+  font-size: 35px;
+  color: #333;
+}
+.karusel .swiper {
+  width: 100%;
+  height: 100%;
+}
+.karusel .swiper-wrapper {
+  margin-top: -3%;
+}
+.karusel .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.karusel .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 main .shopBag {
